@@ -172,8 +172,8 @@ gtk/gtkrecentchooserdefault.c
 gtk/gtkrecentchoosermenu.c
 gtk/gtkrecentmanager.c
 gtk/gtkruler.c
-gtk/gtkscale.c
 gtk/gtkscalebutton.c
+gtk/gtkscale.c
 gtk/gtkscrollbar.c
 gtk/gtkscrolledwindow.c
 gtk/gtkselection.c
@@ -227,16 +227,16 @@ gtk/gtktypeutils.c
 gtk/gtkuimanager.c
 gtk/gtkvbbox.c
 gtk/gtkvbox.c
-gtk/gtkwidget.c
 gtk/gtkviewport.c
 gtk/gtkvolumebutton.c
-gtk/gtkwindow.c
-gtk/gtkwindow-decorate.c
 gtk/gtkvpaned.c
 gtk/gtkvruler.c
 gtk/gtkvscale.c
 gtk/gtkvscrollbar.c
 gtk/gtkvseparator.c
+gtk/gtkwidget.c
+gtk/gtkwindow.c
+gtk/gtkwindow-decorate.c
 gtk/paper_names_offsets.c
 gtk/updateiconcache.c
 modules/input/gtkimcontextxim.c
